feature(trips): View all trips Admin and users can view all trips Trips can be filtered using description and origin [Finishes #167152407]
